--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto&family=Slabo+27px&display=swap" rel="stylesheet">
     <title>Exquisite Eatery Online</title>
     <script src="./src/index.js" type="text/jsx" ></script>
 
